force-app/main/default/objects/Account_Tag__c/Account_Tag__c.object-meta.xml
<CustomObject>
    <description>CRM : Track metadata on accounts</description>
    <label>Account Tag</label>
    <nameField>
        <displayFormat>AT-{00000}</displayFormat>
        <label>Account Tag ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>