force-app/main/default/objects/Account_Tag__c/fields/AccountIdTagsUniqueness__c.field-meta.xml
<CustomField>
    <fullName>AccountIdTagsUniqueness__c</fullName>
    <description>This field is set from the Process Builder (Account Id + Tag__c). Because it is Unique, it will prevent duplicates</description>
    <inlineHelpText>This field is set from the Process Builder (Account Id + Tag__c). Because it is Unique, it will prevent duplicates</inlineHelpText>
    <label>AccountIdTagsUniqueness</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>