force-app/main/default/objects/Account_Tag__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DGX-1 Approved</fullName>
            </value>
            <value>
                <fullName>DGX-1 Proposed</fullName>
            </value>
            <value>
                <fullName>Strategic OEM</fullName>
            </value>
            <value>
                <fullName>Consumer Customer</fullName>
            </value>
            <value>
                <fullName>Enterprise Customer</fullName>
            </value>
            <value>
                <fullName>Automotive Customer</fullName>
            </value>
            <value>
                <fullName>Assigned Account</fullName>
            </value>
            <value>
                <fullName>CPQ Account</fullName>
            </value>
            <value>
                <fullName>Tegra Embedded Customer</fullName>
            </value>
            <value>
                <fullName>GFNA Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>